[package]
name = "trace"
version = "0.3.2"
authors = [
    "Victor Ermolaev <victorermolaev@gmail.com>",
    "Gulshan Singh <gsingh2011@gmail.com>"
    ]
edition = "2018"
repository = "https://github.com/vnermolaev/trace"
license = "MIT"
description = "A syntax extension for tracing the execution of functions"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.20"
quote = "0.6.8"
syn = { version = "0.15.22", features = ["full"] }
rand = "0.7.3"

[dev-dependencies]
log = "0.4.8"
env_logger = "0.6.2"
tokio = {version = "0.2.21", features = ["macros", "time"] }
